--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "lib/xpl"]
 	path = lib/xpl
 	url = git@github.com:tangentstorm/xpl.git
+[submodule "lib/b4"]
+	path = lib/b4
+	url = git@github.com:sabren/b4.git
